--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## todo-list",
   "main": "actions.js",
   "scripts": {
-    "start": "node reducers.js",
+    "start": "babel-node store.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/jeonghoheo/Basic-redux#readme",
   "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "redux": "^4.0.1"
   }
 }
